# cube

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  data.rs  event_handler.rs  main.rs  scramble.rs  statistic.rs  timer.rs  ui.rs
src/ui/: builder.rs  draw.rs  mod.rs
